Bug 1354641 - part 2: fix reftest 672709-ref.html intermittent failure.r=ehsan
Avoid put <script> in body element, because the spell checker will go
through all text elements in <body>. In this case, the whole document is
in designMode, so every word in <body> will be checked. SpellCheker takes
longer time to comsume all words than before, therefore the test might be
timeout.

MozReview-Commit-ID: KCUToY21NhB

--- a/editor/reftests/672709-ref.html
+++ b/editor/reftests/672709-ref.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <html class="reftest-wait">
-  <body>
-    <style>
-      :-moz-read-only { color: red; }
-      :-moz-read-write { color: green; }
-    </style>
+  <head>
     <script>
       onload = function() {
         document.designMode = "on";
@@ -15,6 +11,12 @@
         document.documentElement.removeAttribute("class");
       };
     </script>
+  </head>
+  <body>
+    <style>
+      :-moz-read-only { color: red; }
+      :-moz-read-write { color: green; }
+    </style>
     <div contenteditable id="x">
     </div>
     more test
